feat: added spendings